update ms s3-example example ca